bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:7: error: type mismatch;
 found   : String
 required: Char
		chaine = chaine + str
                                ^frontTimes:10: error: type mismatch;
 found   : Char
 required: String
	return chaine
               ^