bat.string1.lessons.bat.string1.FrontTimes.scala.code
def frontTimes(str:String, n:Int):String = 
{
	var chaine = str(3)
	
	for(i <- 1 to n)
	{
		chaine = chaine + str
	}

	return chaine
}
